--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.1.1",
     "babel-jest": "^29.7.0",
+    "babel-plugin-react-compiler": "^19.1.0-rc.3",
     "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-hooks": "^6.1.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "identity-obj-proxy": "^3.0.0",
